# battlesnake-2025

./: .replit  1v1_loopy_bot.jsonl  BATTLE_ROYALE_ANALYSIS_REPORT.md  BATTLE_ROYALE_FIX_SUMMARY.md  BATTLE_ROYALE_PERFORMANCE_ANALYSIS.md  CLAUDE.md  Cargo.toml  GAPS.md  IDAPOS_TIME_ESTIMATION_FIX.md  ILLEGAL_MOVE_BUG_ANALYSIS.md  ILLEGAL_MOVE_FIX_SUMMARY.md  ILLEGAL_MOVE_ROOT_CAUSE.md  MOVE_ORDERING_BASELINE.md  MOVE_ORDERING_IMPROVEMENTS.md  MOVE_ORDERING_RESULTS.md  MOVE_UNMAKE_OPTIMIZATION.md  OPTIMIZATIONS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_BOTTLENECK_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  REPLAY_PERFORMANCE_VALIDATION.md  Rocket.toml  SELF_PLAY_ANALYSIS.md  SPACE_CONTROL_ANALYSIS.md  Snake.toml  TRAP_ANALYSIS_FINDINGS.md  V10_IMPLEMENTATION_PLAN.md  V8_IMPLEMENTATION_PLAN.md  V8_SUGGESTIONS.md  V9.2_PROPOSAL.md  mixed_aterlo_battles.jsonl  replit.md
.claude/: _settings.json  helper.sh  key.sh  settings.json  settings.local.json
src/: bot.rs  config.rs  debug_logger.rs  handler.rs  lib.rs  main.rs  profiler.rs  replay.rs  simple_profiler.rs  types.rs
tests/: death_dance_behavior_test.rs  replay_1v1_hungry_bot_tests.rs  replay_1v1_loopy_bot_tests.rs  replay_1v1_scared_bot_tests.rs  replay_1v1_self_tests.rs  replay_integration_tests.rs  replay_tests.rs  space_control_tests.rs  trapped_snake_fallback_test.rs
tests/fixtures/: collision_avoidance.jsonl  death_dance_health_disadvantage.jsonl  death_dance_health_shift.jsonl  food_acquisition.jsonl  survival_basic.jsonl  wall_collision_test.jsonl
tests/fixtures/1v1_hungry_bot/: game_01.jsonl  (+18 more)
(+126 files in other folders)
