[package]
authors = ["Martin Amps <https://twitter.com/martinamps>"]
name = "starter-snake-rust"
version = "1.0.0"
edition = "2018"

homepage = "https://play.battlesnake.com"
repository = "https://github.com/BattlesnakeOfficial/starter-snake-rust/"

readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[lib]
name = "starter_snake_rust"
path = "src/lib.rs"

[[bin]]
name = "starter-snake-rust"
path = "src/main.rs"

[[bin]]
name = "replay"
path = "src/bin/replay.rs"
# Note: This binary is required by integration tests in tests/replay_integration_tests.rs
# The test suite automatically builds this binary before running, so no manual build is needed

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.0"
env_logger = "0.11.8"
rand = "0.9.1"
toml = "0.8"
tokio = { version = "1.42", features = ["full"] }
rayon = "1.10"
parking_lot = "0.12"
chrono = "0.4"
